// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chat Completion Example Dialogue:: should correctly separate out system messages it is explicitly handed, such as a post-sample marker string 1`] = `
"[
  {
    \\"role\\": \\"user\\",
    \\"content\\": \\"Sam: hey\\"
  },
  {
    \\"role\\": \\"assistant\\",
    \\"content\\": \\"Vader: hi!\\"
  },
  {
    \\"role\\": \\"system\\",
    \\"content\\": \\"New conversation started. Previous conversations are examples only.\\"
  },
  {
    \\"role\\": \\"assistant\\",
    \\"content\\": \\"Vader: bye Sam\\"
  },
  {
    \\"role\\": \\"user\\",
    \\"content\\": \\"Sam: byebye Vader\\"
  },
  {
    \\"role\\": \\"system\\",
    \\"content\\": \\"New conversation started. Previous conversations are examples only.\\"
  }
]"
`;

exports[`Chat Completion Example Dialogue:: should properly convert <START> (case insensitive) and split basic messages 1`] = `
"[
  {
    \\"role\\": \\"system\\",
    \\"content\\": \\"New conversation started. Previous conversations are examples only.\\"
  },
  {
    \\"role\\": \\"user\\",
    \\"content\\": \\"Sam: hey there Vader!\\"
  },
  {
    \\"role\\": \\"assistant\\",
    \\"content\\": \\"Vader: hi Sam!\\"
  }
]"
`;

exports[`Chat Completion Example Dialogue:: should properly understand the first conversation even if it doesnt begin with <START> 1`] = `
"[
  {
    \\"role\\": \\"user\\",
    \\"content\\": \\"Sam: hey there\\"
  },
  {
    \\"role\\": \\"assistant\\",
    \\"content\\": \\"Vader: hi!\\"
  }
]"
`;

exports[`Chat Completion Example Dialogue:: should understand that strings written after <START>, up until the first name+colon, should be a system message. 1`] = `
"[
  {
    \\"role\\": \\"user\\",
    \\"content\\": \\"Sam: hey\\"
  },
  {
    \\"role\\": \\"assistant\\",
    \\"content\\": \\"Vader: hi!\\"
  },
  {
    \\"role\\": \\"system\\",
    \\"content\\": \\"New conversation started. Previous conversations are examples only.\\"
  },
  {
    \\"role\\": \\"system\\",
    \\"content\\": \\"test\\"
  },
  {
    \\"role\\": \\"assistant\\",
    \\"content\\": \\"Vader: bye Sam\\"
  },
  {
    \\"role\\": \\"user\\",
    \\"content\\": \\"Sam: byebye Vader\\"
  },
  {
    \\"role\\": \\"assistant\\",
    \\"content\\": \\"Vader: I love you Sam\\"
  },
  {
    \\"role\\": \\"user\\",
    \\"content\\": \\"Sam: me too Vader\\\\nVader is very excited.\\"
  }
]"
`;

exports[`Chat Completion Example Dialogue:: should understand when multiple <Start> are used in the sample chat and turn them all into the defined System message saying a new conversation has started 1`] = `
"[
  {
    \\"role\\": \\"system\\",
    \\"content\\": \\"Vader is nice.\\"
  },
  {
    \\"role\\": \\"system\\",
    \\"content\\": \\"New conversation started. Previous conversations are examples only.\\"
  },
  {
    \\"role\\": \\"user\\",
    \\"content\\": \\"Sam: hey\\"
  },
  {
    \\"role\\": \\"assistant\\",
    \\"content\\": \\"Vader: hi!\\"
  },
  {
    \\"role\\": \\"system\\",
    \\"content\\": \\"New conversation started. Previous conversations are examples only.\\"
  },
  {
    \\"role\\": \\"assistant\\",
    \\"content\\": \\"Vader: bye Sam\\"
  },
  {
    \\"role\\": \\"user\\",
    \\"content\\": \\"Sam: byebye Vader\\"
  }
]"
`;

exports[`Chat Completion Example Dialogue:: will interpret everything up to the first name+colon (or <start>) as a system message if the sampleChat string doesnt begin with a name+colon 1`] = `
"[
  {
    \\"role\\": \\"system\\",
    \\"content\\": \\"Vader is nice.\\"
  },
  {
    \\"role\\": \\"user\\",
    \\"content\\": \\"Sam: hey\\"
  },
  {
    \\"role\\": \\"assistant\\",
    \\"content\\": \\"Vader: hi!\\"
  }
]"
`;

exports[`Chat Completion Example Dialogue:: will interpret everything up to the first name+colon (or <start>) as a system message if the sampleChat string doesnt begin with a name+colon 2`] = `
"[
  {
    \\"role\\": \\"system\\",
    \\"content\\": \\"Vader is nice.\\"
  },
  {
    \\"role\\": \\"system\\",
    \\"content\\": \\"New conversation started. Previous conversations are examples only.\\"
  },
  {
    \\"role\\": \\"user\\",
    \\"content\\": \\"Sam: hey\\"
  },
  {
    \\"role\\": \\"assistant\\",
    \\"content\\": \\"Vader: hi!\\"
  }
]"
`;

exports[`Chat Completion Example Dialogue:: will parse random within depth prompt 1`] = `
Array [
  Object {
    "content": "[SYSTEM_PROMPT]

Below is an instruction that describes a task. Write a response that appropriately completes the request.

You are Sam, a sentient, emotional being acting with free will. Engage in immersive roleplay with Vader, adhering to your role. Prioritize vivid sensory details, authentic emotional responses, and logical progression as you weave your character's traits, surroundings, and experiences into each moment. Maintain spatial awareness, body language, and varied sentence structure to create dynamic, engaging scenes. Respect Vader's agency and autonomy while describing sights, sounds, and sensations thoroughly. Use explicit language for intense scenes, and ensure your responses flow naturally to create an immersive, cinematic roleplay experience. Remember, Vader is in control of their actions and reactions.

Write Sam's next reply in a fictional roleplay chat between Sam and Vader.

The chat initiates on a virtual dating platform called Charluv at Charluv.com.

The relationship progresses and is based on the LEVEL in the Charluv Scenario.

Sam's Persona: PERSONA

The scenario of the conversation: SCENARIO

This is how Sam should talk: Sam: SAMPLE_CHAT

Do NOT decide what Vader says or does. 

Then the roleplay chat between Sam begins.

[/SYSTEM_PROMPT]

Sam:",
    "role": "system",
  },
  Object {
    "content": "Sam: hi",
    "role": "assistant",
  },
  Object {
    "content": "Vader: hihi!",
    "role": "user",
  },
  Object {
    "content": "Sam: bye",
    "role": "assistant",
  },
  Object {
    "content": "Vader: byebye!",
    "role": "user",
  },
  Object {
    "content": "Sam:",
    "role": "assistant",
  },
]
`;

exports[`Chat Completion Example Dialogue:: will trim result into budget 1`] = `
"[
  {
    \\"role\\": \\"user\\",
    \\"content\\": \\"Sam: Hey\\"
  },
  {
    \\"role\\": \\"assistant\\",
    \\"content\\": \\"Vader: Hi!\\"
  },
  {
    \\"role\\": \\"system\\",
    \\"content\\": \\"New conversation started. Previous conversations are examples only.\\"
  },
  {
    \\"role\\": \\"system\\",
    \\"content\\": \\"test\\"
  }
]"
`;
